# snake-game

./: .gitignore  LICENSE  MANIFEST.in  SnakeGame.py  requirements.txt  setup.cfg  test.sh
.github/workflows/: deploy-package.yml  test-package.yml
snake_game/: snake.kv  snake_game.py
