[metadata]
name = snake_game
version = attr: setup.version 
url = https://github.com/benjiemc/snake-game
author = Benjamin McMaster
author-email = benjamin.mcmaster@alumni.ubc.ca
description = Basic snake game in python
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires = 
    Kivy == 1.11.1
    Kivy-Garden == 0.1.4
    numpy

[options.entry_points]
console_scripts =
    snake-game = snake_game.snake_game:start_game

[options.extras_require]
develop =
    nose
    nose-cov

[nosetests]
with-coverage = True
cover-package = snake_game
cover-erase = True
tests = tests/unit
with-doctest = True

[coverage:run]
branch = True

[coverage:report]
ignore_errors = True
