[metadata]
name = snake_game
version = attr: setup.version 
url = https://github.com/benjiemc/snake-game
author = Benjamin McMaster
author-email = benjamin.mcmaster@alumni.ubc.ca
description = Basic snake game in python
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires = 
    Kivy
    numpy

[options.entry_points]
console_scripts =
    snake-game = snake_game.snake_game:start_game

[options.extras_require]
develop =
    pytest
    pytest-cov
    flake8

[flake8]
max-line-length = 120
